force-app/main/default/objects/Installation_Order__c/Installation_Order__c.object-meta.xml
<CustomObject>
    <label>Installation Order</label>
    <nameField>
        <label>Installation Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>INSTALLATION ORDER</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>