force-app/main/default/objects/Installation_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>INSTALLATION ORDER</relationshipLabel>
    <relationshipName>INSTALLATION_ORDER</relationshipName>
    <type>Lookup</type>
</CustomField>