force-app/main/default/objects/Installation_Order__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <label>Adress</label>
    <type>Address</type>
</CustomField>