force-app/main/default/objects/Installation_Order__c/fields/Installation_Location__c.field-meta.xml
<CustomField>
    <fullName>Installation_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>INSTALLATION ORDER</relationshipLabel>
    <relationshipName>INSTALLATION_ORDER</relationshipName>
    <type>Lookup</type>
</CustomField>