force-app/main/default/objects/Installation_Order__c/fields/Installation_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Installation_Order_Number__c</fullName>
    <displayFormat>INS-{0000}</displayFormat>
    <label>Installation Order Number</label>
    <type>AutoNumber</type>
</CustomField>