force-app/main/default/objects/Installation_Order__c/fields/Installation_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Installation_To_Address__c</fullName>
    <label>Installation To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>