force-app/main/default/objects/Installation_Order__c/fields/Installation_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Installation_To_Email_Address__c</fullName>
    <label>Installation To Email Address</label>
    <type>Email</type>
</CustomField>