force-app/main/default/objects/Installation_Order__c/fields/Installation_To_Phone__c.field-meta.xml
<CustomField>
    <fullName>Installation_To_Phone__c</fullName>
    <label>Installation To Phone</label>
    <type>Phone</type>
</CustomField>