force-app/main/default/objects/Installation_Order__c/fields/ItemCount__c.field-meta.xml
<CustomField>
    <fullName>ItemCount__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>Installation_Order_Product__c.Quantity__c</summarizedField>
    <summaryForeignKey>Installation_Order_Product__c.Installation_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>