force-app/main/default/objects/Installation_Order__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>INSTALLATION ORDER</relationshipLabel>
    <relationshipName>INSTALLATION_ORDER</relationshipName>
    <type>Lookup</type>
</CustomField>