force-app/main/default/objects/Installation_Order__c/fields/Order_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Order_Recipient__c</fullName>
    <label>Order Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>