force-app/main/default/objects/Installation_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Installation_Order_Product__c.Line_Subtotal__c</summarizedField>
    <summaryForeignKey>Installation_Order_Product__c.Installation_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>