force-app/main/default/objects/Installation_Order__c/fields/TotalTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxAmount__c</fullName>
    <label>Tax</label>
    <summarizedField>Installation_Order_Product__c.Gross_Unit_Price__c</summarizedField>
    <summaryForeignKey>Installation_Order_Product__c.Installation_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>