force-app/main/default/objects/Installation_Order__c/fields/Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Number</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>INSTALLATION ORDER</relationshipLabel>
    <relationshipName>INSTALLATION_ORDER</relationshipName>
    <type>Lookup</type>
</CustomField>